메뉴추천받기

--- a/오늘뭐먹지/메뉴추천받기.html
+++ b/오늘뭐먹지/메뉴추천받기.html
@@ -142,8 +142,8 @@
               <label for="시험전날">시험전날</label>
               <input type="checkbox" name="숙취심한날" id="숙취심한날" />
               <label for="숙취심한날">숙취심한날</label>
-              <input type="checkbox" name="외사점심회식" id="외사점심회식" />
-              <label for="외사점심회식">외사점심회식</label>
+              <input type="checkbox" name="회사점심회식" id="회사점심회식" />
+              <label for="회사점심회식">회사점심회식</label>
               <input type="checkbox" name="회의간식" id="회의간식" />
               <label for="회의간식">회의간식</label>
               <input type="checkbox" name="어르신과식사" id="어르신과식사" />
