키워드 변경
키워드 변경

--- a/오늘뭐먹지/메뉴추천받기.html
+++ b/오늘뭐먹지/메뉴추천받기.html
@@ -80,82 +80,104 @@
         <ul class="keyword_box">
           <li class="keyword_box__item">
             <form>
-              <input type="checkbox" name="꿀꿀해" id="꿀꿀해" />
-              <label for="꿀꿀해">꿀꿀해</label>
-              <input type="checkbox" name="따분해" id="따분해" />
-              <label for="따분해">따분해</label>
-              <input type="checkbox" name="심심해" id="심심해" />
-              <label for="심심해">심심해</label>
-              <input type="checkbox" name="나쁘지않아" id="나쁘지않아" />
-              <label for="나쁘지않아">나쁘지않아</label>
-              <input type="checkbox" name="신나" id="신나" />
-              <label for="신나">신나</label>
-              <input type="checkbox" name="여유로워" id="여유로워" />
-              <label for="여유로워">여유로워</label>
-              <input type="checkbox" name="불안해" id="불안해" />
-              <label for="불안해">불안해</label>
-              <input type="checkbox" name="지루해" id="지루해" />
-              <label for="지루해">지루해</label>
-              <input type="checkbox" name="착잡해" id="착잡해" />
-              <label for="착잡해">착잡해</label>
-              <input type="checkbox" name="즐거워" id="즐거워" />
-              <label for="즐거워">즐거워</label>
-              <input type="checkbox" name="평온해" id="평온해" />
-              <label for="평온해">평온해</label>
-              <input type="checkbox" name="무기력해" id="무기력해" />
-              <label for="무기력해">무기력해</label>
+              <input type="checkbox" name="즐거운" id="즐거운" />
+              <label for="즐거운">즐거운</label>
+              <input type="checkbox" name="무기력한" id="무기력한" />
+              <label for="무기력한">무기력한</label>
+              <input type="checkbox" name="입이심심한" id="입이심심한" />
+              <label for="입이심심한">입이 심심한</label>
+              <input type="checkbox" name="허전한" id="허전한" />
+              <label for="허전한">허전한</label>
+              <input type="checkbox" name="행복한" id="행복한" />
+              <label for="행복한">행복한</label>
+              <input type="checkbox" name="설레는" id="설레는" />
+              <label for="설레는">설레는</label>
+              <input type="checkbox" name="긴장되는" id="긴장되는" />
+              <label for="긴장되는">긴장되는</label>
+              <input type="checkbox" name="짜증나는" id="짜증나는" />
+              <label for="짜증나는">짜증나는</label>
+              <input type="checkbox" name="피곤한" id="피곤한" />
+              <label for="피곤한">피곤한</label>
+              <input type="checkbox" name="기쁜" id="기쁜" />
+              <label for="기쁜">기쁜</label>
+              <input type="checkbox" name="슬픈" id="슬픈" />
+              <label for="슬픈">슬픈</label>
+              <input type="checkbox" name="답답한" id="답답한" />
+              <label for="답답한">답답한</label>
+              <input type="checkbox" name="우울한" id="우울한" />
+              <label for="우울한">우울한</label>
+              <input type="checkbox" name="예민한" id="예민한" />
+              <label for="예민한">예민한</label>
+              <input type="checkbox" name="스트레스받는" id="스트레스받는" />
+              <label for="스트레스받는">스트레스 받는</label>
             </form>
           </li>
           <li class="keyword_box__item">
             <form>
-              <input type="checkbox" name="습해" id="습해" />
-              <label for="습해">습해</label>
-              <input type="checkbox" name="화창해" id="화창해" />
-              <label for="화창해">화창해</label>
-              <input type="checkbox" name="선선해" id="선선해" />
-              <label for="선선해">선선해</label>
-              <input type="checkbox" name="추워" id="추워" />
-              <label for="추워">추워</label>
-              <input type="checkbox" name="더워" id="더워" />
-              <label for="더워">더워</label>
-              <input type="checkbox" name="건조해" id="건조해" />
-              <label for="건조해">건조해</label>
-              <input type="checkbox" name="비와" id="비와" />
-              <label for="비와">비와</label>
-              <input type="checkbox" name="눈와" id="눈와" />
-              <label for="눈와">눈와</label>
-              <input type="checkbox" name="흐려" id="흐려" />
-              <label for="흐려">흐려</label>
-              <input type="checkbox" name="번개쳐" id="번개쳐" />
-              <label for="번개쳐">번개쳐</label>
-              <input type="checkbox" name="바람불어" id="바람불어" />
-              <label for="바람불어">바람불어</label>
-              <input type="checkbox" name="미세먼지" id="미세먼지" />
-              <label for="미세먼지">미세먼지</label>
+              <input type="checkbox" name="화창한" id="화창한" />
+              <label for="화창한">화창한</label>
+              <input type="checkbox" name="선선한" id="선선한" />
+              <label for="선선한">선선한</label>
+              <input type="checkbox" name="추운" id="추운" />
+              <label for="추운">추운</label>
+              <input type="checkbox" name="더운" id="더운" />
+              <label for="더운">더운</label>
+              <input type="checkbox" name="비가오는" id="비가오는" />
+              <label for="비가오는">비가오는</label>
+              <input type="checkbox" name="눈오는" id="눈오는" />
+              <label for="눈오는">눈오는</label>
+              <input type="checkbox" name="바람부는" id="바람부는" />
+              <label for="바람부는">바람부는</label>
+              <input type="checkbox" name="미세먼지심한" id="미세먼지심한" />
+              <label for="미세먼지심한">미세먼지 심한</label>
+              <input type="checkbox" name="따뜻한" id="따뜻한" />
+              <label for="따뜻한">따뜻한</label>
+              <input type="checkbox" name="번개치는" id="번개치는" />
+              <label for="번개치는">번개치는</label>
+              <input type="checkbox" name="안개낀" id="안개낀" />
+              <label for="안개낀">안개 낀</label>
+              <input type="checkbox" name="쌀쌀한" id="쌀쌀한" />
+              <label for="쌀쌀한">쌀쌀한</label>
+               <input type="checkbox" name="건조한" id="건조한" />
+              <label for="건조한">건조한</label>
+              <input type="checkbox" name="습한" id="습한" />
+              <label for="습한">습한</label>
+              <input type="checkbox" name="쌀쌀한" id="쌀쌀한" />
+              <label for="쌀쌀한">쌀쌀한</label>
             </form>
           </li>
           <li class="keyword_box__item">
             <form>
-              <input type="checkbox" name="면접전날" id="면접전날" />
-              <label for="면접전날">면접전날</label>
-              <input type="checkbox" name="시험전날" id="시험전날" />
-              <label for="시험전날">시험전날</label>
-              <input type="checkbox" name="숙취심한날" id="숙취심한날" />
-              <label for="숙취심한날">숙취심한날</label>
-              <input type="checkbox" name="회사점심회식" id="회사점심회식" />
-              <label for="회사점심회식">회사점심회식</label>
-              <input type="checkbox" name="회의간식" id="회의간식" />
-              <label for="회의간식">회의간식</label>
-              <input type="checkbox" name="어르신과식사" id="어르신과식사" />
-              <label for="어르신과식사">어르신과식사</label>
-              <input type="checkbox" name="소개팅전날" id="소개팅전날" />
-              <label for="소개팅전날">소개팅전날</label>
-              <input type="checkbox" name="홈파티" id="홈파티" />
-              <label for="홈파티">홈파티</label>
-              <input type="checkbox" name="가족식사" id="가족식사" />
-              <label for="가족식사">가족식사</label>
-              <input type="checkbox" name="2-3인용" id="2-3인용" />
-              <label for="2-3인용">2-3인용</label>
+              <input type="checkbox" name="다이어트3일차날" id="다이어트3일차날" />
+              <label for="다이어트3일차날">다이어트 3일차 날</label>
+              <input type="checkbox" name="회사점심회식날" id="회사점심회식날" />
+              <label for="회사점심회식날">회사점심회식 날</label>
+              <input type="checkbox" name="가족식사날" id="가족식사날" />
+              <label for="가족식사날">가족식사 날</label>
+              <input type="checkbox" name="집들이날" id="집들이날" />
+              <label for="집들이날">집들이 날</label>
+              <input type="checkbox" name="손님대접하는날" id="손님대접하는날" />
+              <label for="손님대접하는날">손님 대접하는 날</label>
+              <input type="checkbox" name="단체주문있는날" id="단체주문있는날" />
+              <label for="단체주문있는날">단체 주문 있는 날</label>
+              <input type="checkbox" name="야식당기는날" id="야식당기는날" />
+              <label for="야식당기는날">야식 당기는 날</label>
+              <input type="checkbox" name="소화안되는날" id="소화안되는날" />
+              <label for="소화안되는날">소화 안 되는 날</label>
+              <input type="checkbox" name="데이트하는날" id="데이트하는날" />
+              <label for="데이트하는날">데이트 하는 날</label>
+              <input type="checkbox" name="당기는음식이없는날" id="당기는음식이없는날" />
+              <label for="당기는음식이없는날">당기는 음식이 없는 날</label>
+              <input type="checkbox" name="잠안오는날" id="잠안오는날" />
+              <label for="잠안오는날">잠안오는 날</label>
+              <input type="checkbox" name="배부른데입심심한날" id="배부른데입심심한날" />
+              <label for="배부른데입심심한날">배부른데 입 심심한 날</label>
+              <input type="checkbox" name="혼밥하는날" id="혼밥하는날" />
+              <label for="혼밥하는날">혼밥하는 날</label>
+              <input type="checkbox" name="면접날" id="면접날" />
+              <label for="면접날">면접 날</label>
+              <input type="checkbox" name="기념일" id="기념일" />
+              <label for="기념일">기념일</label>
             </form>
           </li>
         </ul>
